[gd_scene load_steps=2 format=2]

[ext_resource path="res://scripts/ui/options_panel.gd" type="Script" id=1]

[node name="Settings" type="VBoxContainer"]
anchor_left = 0.1
anchor_top = 0.15
anchor_right = 0.9
anchor_bottom = 0.9
custom_constants/separation = 10
alignment = 1
script = ExtResource( 1 )

[node name="MasterVolume" type="HBoxContainer" parent="."]
margin_top = 147.0
margin_right = 819.0
margin_bottom = 171.0

[node name="Label" type="Label" parent="MasterVolume"]
margin_top = 5.0
margin_right = 200.0
margin_bottom = 19.0
rect_min_size = Vector2( 200, 0 )
text = "Master Volume"

[node name="HSlider" type="HSlider" parent="MasterVolume"]
margin_left = 204.0
margin_right = 715.0
margin_bottom = 24.0
size_flags_horizontal = 3
size_flags_vertical = 1
max_value = 2.0
step = 0.01
value = 1.0

[node name="MuteButton" type="CheckBox" parent="MasterVolume"]
margin_left = 719.0
margin_right = 819.0
margin_bottom = 24.0
rect_min_size = Vector2( 100, 0 )
text = "Mute"
align = 1

[node name="SFXVolume" type="HBoxContainer" parent="."]
margin_top = 181.0
margin_right = 819.0
margin_bottom = 205.0

[node name="Label" type="Label" parent="SFXVolume"]
margin_top = 5.0
margin_right = 200.0
margin_bottom = 19.0
rect_min_size = Vector2( 200, 0 )
text = "SFX Volume"

[node name="HSlider" type="HSlider" parent="SFXVolume"]
margin_left = 204.0
margin_right = 715.0
margin_bottom = 24.0
size_flags_horizontal = 3
size_flags_vertical = 1
max_value = 2.0
step = 0.01
value = 1.0

[node name="MuteButton" type="CheckBox" parent="SFXVolume"]
margin_left = 719.0
margin_right = 819.0
margin_bottom = 24.0
rect_min_size = Vector2( 100, 0 )
text = "Mute"
align = 1

[node name="MusicVolume" type="HBoxContainer" parent="."]
margin_top = 215.0
margin_right = 819.0
margin_bottom = 239.0

[node name="Label" type="Label" parent="MusicVolume"]
margin_top = 5.0
margin_right = 200.0
margin_bottom = 19.0
rect_min_size = Vector2( 200, 0 )
text = "Music Volume"

[node name="HSlider" type="HSlider" parent="MusicVolume"]
margin_left = 204.0
margin_right = 715.0
margin_bottom = 24.0
size_flags_horizontal = 3
size_flags_vertical = 1
max_value = 2.0
step = 0.01
value = 1.0

[node name="MuteButton" type="CheckBox" parent="MusicVolume"]
margin_left = 719.0
margin_right = 819.0
margin_bottom = 24.0
rect_min_size = Vector2( 100, 0 )
text = "Mute"
align = 1

[node name="Fullscreen" type="HBoxContainer" parent="."]
margin_top = 249.0
margin_right = 819.0
margin_bottom = 273.0

[node name="Label" type="Label" parent="Fullscreen"]
margin_top = 5.0
margin_right = 200.0
margin_bottom = 19.0
rect_min_size = Vector2( 200, 0 )
text = "Fullscreen"

[node name="CheckBox" type="CheckBox" parent="Fullscreen"]
margin_left = 204.0
margin_right = 228.0
margin_bottom = 24.0

[node name="ResetToDefaultButton" type="Button" parent="."]
margin_left = 342.0
margin_top = 283.0
margin_right = 476.0
margin_bottom = 303.0
size_flags_horizontal = 4
text = "Reset all to Default"

[connection signal="value_changed" from="MasterVolume/HSlider" to="." method="_on_MasterVolume_value_changed"]
[connection signal="toggled" from="MasterVolume/MuteButton" to="." method="_on_MasterVolumeMute_toggled"]
[connection signal="value_changed" from="SFXVolume/HSlider" to="." method="_on_SFXVolume_value_changed"]
[connection signal="toggled" from="SFXVolume/MuteButton" to="." method="_on_SFXVolumeMute_toggled"]
[connection signal="value_changed" from="MusicVolume/HSlider" to="." method="_on_MusicVolume_value_changed"]
[connection signal="toggled" from="MusicVolume/MuteButton" to="." method="_on_MusicVolumeMute_toggled"]
[connection signal="toggled" from="Fullscreen/CheckBox" to="." method="_on_Fullscreen_toggled"]
[connection signal="pressed" from="ResetToDefaultButton" to="." method="_on_ResetToDefaultButton_pressed"]
